--- a/meper.html
+++ b/meper.html
@@ -30,6 +30,11 @@
         #yesButton {
             width: 200px;
             height: 50px; /* Agregado: ajusta el alto */
+        }   
+        #thanksMessage {
+            margin-top: 20px;
+            font-size: 24px;
+            color: #b30cc5;
         }
     </style>
 </head>
@@ -37,34 +42,23 @@
     <h1>¿Me perdonas?</h1>
     <img src="https://media1.tenor.com/m/5Ux5jcrpkHoAAAAC/a-peck-on-the-cheeks-pudgy-penguins.gif" alt="Ositos o Tortugas">
     <br><br>
-    <button id="yesButton" class="button" onclick="enlargeButton()">Sí</button>
+    <button id="yesButton" class="button" onclick="showMessage()">Sí</button>
     <button id="noButton" class="button" onclick="moveButton()">No</button>
+    <div id="thanksMessage"></div>
 
     <script>
+        function showMessage() {
+            var messageElement = document.getElementById("thanksMessage");
+            messageElement.style.display = "block"; // Mostrar el mensaje
+        }
+        
         function moveButton() {
             var noButton = document.getElementById("noButton");
             var currentPosition = parseInt(noButton.style.marginLeft) || 0;
             var newPosition = currentPosition + 40; // Cambiado: mover hacia la izquierda
             noButton.style.marginLeft = newPosition + "px";
-
-            var yesButton = document.getElementById("yesButton");
-            var currentWidth = parseInt(window.getComputedStyle(yesButton).width);
-            var newWidth = currentWidth * 1.1; // Aumenta en un 10%
-            var currentHeight = parseInt(window.getComputedStyle(yesButton).height); // Agregado: obtén la altura actual
-            var newHeight = currentHeight * 1.1; // Aumenta en un 10%
-            yesButton.style.width = newWidth + "px";
-            yesButton.style.height = newHeight + "px"; // Agregado: ajusta la altura
         }
 
-        function enlargeButton() {
-            var yesButton = document.getElementById("yesButton");
-            var currentWidth = parseInt(window.getComputedStyle(yesButton).width);
-            var newWidth = currentWidth * 1.1; // Aumenta en un 10%
-            var currentHeight = parseInt(window.getComputedStyle(yesButton).height); // Agregado: obtén la altura actual
-            var newHeight = currentHeight * 1.1; // Aumenta en un 10%
-            yesButton.style.width = newWidth + "px";
-            yesButton.style.height = newHeight + "px"; // Agregado: ajusta la altura
-        }
     </script>
 </body>
 </html>
