--- a/meper.html
+++ b/meper.html
@@ -44,7 +44,7 @@
     <br><br>
     <button id="yesButton" class="button" onclick="showMessage()">Sí</button>
     <button id="noButton" class="button" onclick="moveButton()">No</button>
-    <div id="thanksMessage"></div>
+    <div id="thanksMessage">¡Gracias por CREER!</div>
 
     <script>
         function showMessage() {
