--- a/meper.html
+++ b/meper.html
@@ -35,6 +35,7 @@
             margin-top: 20px;
             font-size: 24px;
             color: #b30cc5;
+            display: none; 
         }
     </style>
 </head>
