--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             margin-top: 20px;
             font-size: 24px;
             color: #b30cc5;
+            display: none; 
         }
     </style>
 </head>
@@ -44,7 +45,7 @@
     <br><br>
     <button id="yesButton" class="button" onclick="showMessage()">Sí</button>
     <button id="noButton" class="button" onclick="moveButton()">No</button>
-    <div id="thanksMessage"></div>
+    <div id="thanksMessage">¡Gracias por CREER!</div>
 
     <script>
         function showMessage() {
