--- a/meper.html
+++ b/meper.html
@@ -40,7 +40,7 @@
     </style>
 </head>
 <body>
-    <h1>¿Me perdonas?</h1>
+    <h1>¿Quieres volver a intentarlo?</h1>
     <img src="https://media1.tenor.com/m/5Ux5jcrpkHoAAAAC/a-peck-on-the-cheeks-pudgy-penguins.gif" alt="Ositos o Tortugas">
     <br><br>
     <button id="yesButton" class="button" onclick="showMessage()">Sí</button>
