--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <br><br>
     <button id="yesButton" class="button" onclick="showMessage()">Sí</button>
     <button id="noButton" class="button" onclick="moveButton()">No</button>
-    <div id="thanksMessage">¡Gracias por creer en nuestro amor, te amo!</div>
+    <div id="thanksMessage">¡Gracias por creer, te amo, no te arrepentirás!</div>
 
     <script>
         function showMessage() {
